plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'com.google.cloud.tools.jib' version '3.4.0'
}

group = 'com.tcc'
version = '0.0.1'
jib.to.image = 'gcr.io/dynamic-web-413411/dynamic-web'
jib.container.creationTime = 'USE_CURRENT_TIMESTAMP'

java {
	sourceCompatibility = JavaVersion.VERSION_17
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	implementation 'com.squareup.okhttp3:okhttp:4.9.0'
	implementation 'com.google.code.gson:gson:2.8.8'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//implementation platform("org.springframework.ai:spring-ai-bom:0.8.0")
	//implementation 'org.springframework.ai:spring-ai-openai'
	//implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
}


